[package]
name = "rccp"
description = "Rust Calculator for Cool People"
repository = "https://github.com/d3vboi/rccp"
version = "0.1.6"
edition = "2021"

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["command-line-utilities"]
keywords = ["calculator", "cli", "math"]
default-run = "rccp"

[dependencies]
