[package]
name = "rccp"
description = "Rust Calculator for Cool People"
repository = "https://github.com/d3vboi/rccp"
version = "0.2.1"
edition = "2021"

readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["command-line-utilities"]
keywords = ["calculator", "cli", "math"]
default-run = "rccp"

[dependencies]
colored = "2.0.4"
rustyline = "12.0.0"
